--- a/app/src/main/res/layout/layout_listview_coches.xml
+++ b/app/src/main/res/layout/layout_listview_coches.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent">
 
     <ImageView
@@ -15,6 +15,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="38dp"
+        android:layout_marginBottom="38dp"
         app:srcCompat="@drawable/ic_launcher_background" />
 
     <TextView
