--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="naranja"> #FF9C1E </color>
+    <color name="fondo_detalle">#ffeece</color>
+    <color name="verde"> #65ff51 </color>
 </resources>
