--- a/app/src/main/res/layout/content_detalle.xml
+++ b/app/src/main/res/layout/content_detalle.xml
@@ -124,5 +124,18 @@
             android:inputType="textMultiLine"
             android:text="DESCRIPCION" />
 
+        <ListView
+            android:id="@+id/lv"
+            android:layout_width="400dp"
+            android:layout_height="300dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="39dp"
+            android:layout_marginLeft="39dp"
+            android:layout_marginTop="360dp"
+            android:layout_marginEnd="39dp" />
+
     </RelativeLayout>
 </android.support.v4.widget.NestedScrollView>
