--- a/app/src/main/res/values/opcionesEntrada.xml
+++ b/app/src/main/res/values/opcionesEntrada.xml
@@ -2,7 +2,7 @@
 <resources>
     <string-array name="opcionesEntrada">
         <item>Cámara</item>
-        <!-- <item>Galería</item> -->
+        <item>Galería</item>
     </string-array>
 
 
