--- a/app/src/main/res/layout/activity_nuevo_vehiculo.xml
+++ b/app/src/main/res/layout/activity_nuevo_vehiculo.xml
@@ -10,11 +10,13 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical|center_horizontal"
             android:orientation="horizontal">
 
             <ImageView
@@ -22,14 +24,8 @@
                 android:layout_width="190dp"
                 android:layout_height="118dp"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/ic_launcher_background" />
+                app:srcCompat="@drawable/image" />
 
-            <Button
-                android:id="@+id/btnImagen"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="seleccionar imagen" />
         </LinearLayout>
 
         <LinearLayout
@@ -60,7 +56,7 @@
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="wrap_content"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Modelo:" />
@@ -81,7 +77,7 @@
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="wrap_content"
+                android:layout_width="42dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Descripcion:" />
