--- a/app/src/main/res/layout/layout_listview_coches.xml
+++ b/app/src/main/res/layout/layout_listview_coches.xml
@@ -1,44 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="20dp">
 
     <ImageView
         android:id="@+id/imgv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="38dp"
-        android:layout_marginBottom="38dp"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        android:layout_width="325dp"
+        android:layout_height="126dp"
+        android:layout_marginBottom="10dp"
+        app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
         android:id="@+id/txvMarca"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/imgv"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="105dp"
-        android:layout_marginRight="105dp"
-        android:text="MARCA" />
+        android:layout_marginBottom="5dp"
+        android:fontFamily="@font/gentium_basic_bold"
+        android:text="MARCA"
+        android:textColor="@color/naranja"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/txvModelo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="97dp"
-        android:layout_marginEnd="102dp"
-        android:layout_marginRight="102dp"
-        android:text="MODELO" />
-</RelativeLayout>
+        android:layout_marginBottom="10dp"
+        android:fontFamily="@font/gentium_basic_bold"
+        android:text="MODELO"
+        android:textSize="20sp" />
+</LinearLayout>
