--- a/app/src/main/res/layout/layout_listview_presupuesto.xml
+++ b/app/src/main/res/layout/layout_listview_presupuesto.xml
@@ -4,18 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="30dp"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingBottom="20dp">
 
     <TextView
         android:id="@+id/txvNombre"
-        android:layout_width="149dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:focusable="false"
+        android:fontFamily="@font/gentium_basic_bold"
         android:gravity="center"
         android:text="NOMBRE"
-        android:focusable="false"/>
+        android:textColor="@color/naranja"
+        android:textSize="20sp"
+        android:maxLines="3"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,16 +30,22 @@
             android:id="@+id/txvPrecio"
             android:layout_width="201dp"
             android:layout_height="wrap_content"
+            android:focusable="false"
+            android:fontFamily="@font/gentium_basic_bold"
             android:gravity="center"
             android:text="PRECIO"
-            android:focusable="false"/>
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textSize="20sp" />
 
         <CheckBox
             android:id="@+id/checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="100dp"
-            android:focusable="false"/>
+            android:focusable="false"
+            android:fontFamily="@font/gentium_basic_bold"
+            android:textColorLink="@color/naranja"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
