--- a/app/src/main/res/layout/content_detalle.xml
+++ b/app/src/main/res/layout/content_detalle.xml
@@ -4,138 +4,165 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/fondo_detalle"
     android:fillViewport="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".Detalle"
     tools:showIn="@layout/activity_detalle">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/fondo_detalle"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="74dp"
-            android:layout_marginLeft="74dp"
-            android:layout_marginTop="68dp"
-            android:text="MARCA:" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/textView3"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="-7dp"
-            android:layout_marginTop="105dp"
-            android:text="MODELO:" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/textView3"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="179dp"
-            android:layout_marginEnd="-104dp"
-            android:text="DESCRIPCIÓN:" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/textView4"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="361dp"
-            android:layout_marginEnd="12dp"
-            android:text="PRECIO:" />
-
-        <EditText
-            android:id="@+id/edtMarca"
-            android:layout_width="160dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="64dp"
-            android:layout_marginEnd="44dp"
-            android:layout_marginRight="44dp"
-            android:background="@null"
-            android:editable="false"
-            android:ems="10"
-            android:focusable="false"
+            android:layout_marginBottom="30dp"
             android:gravity="center"
-            android:inputType="textPersonName"
-            android:text="MARCA" />
+            android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/edtModelo"
-            android:layout_width="160dp"
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/gentium_basic_bold"
+                android:text="MARCA:"
+                android:textColor="@color/naranja"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/edtMarca"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:editable="false"
+                android:ems="10"
+                android:focusable="false"
+                android:fontFamily="@font/gentium_basic_bold"
+                android:gravity="center"
+                android:inputType="textPersonName"
+                android:text="MARCA"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="97dp"
-            android:layout_marginEnd="45dp"
-            android:layout_marginRight="45dp"
-            android:background="@null"
-            android:ems="10"
-            android:focusable="false"
+            android:layout_marginBottom="30dp"
             android:gravity="center"
-            android:inputType="textPersonName"
-            android:text="MODELO" />
+            android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/edtPrecio"
-            android:layout_width="160dp"
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/gentium_basic_bold"
+                android:text="MODELO:"
+                android:textColor="@color/naranja"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/edtModelo"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:ems="10"
+                android:focusable="false"
+                android:fontFamily="@font/gentium_basic_bold"
+                android:gravity="center"
+                android:inputType="textPersonName"
+                android:text="MODELO"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="357dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginRight="50dp"
-            android:background="@null"
-            android:ems="10"
-            android:focusable="false"
+            android:layout_marginBottom="30dp"
             android:gravity="center"
-            android:inputType="numberDecimal"
-            android:text="PRECIO" />
+            android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/edtDescripcion"
-            android:layout_width="321dp"
-            android:layout_height="113dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="39dp"
-            android:layout_marginLeft="39dp"
-            android:layout_marginTop="219dp"
-            android:background="@null"
-            android:ems="10"
-            android:focusable="false"
-            android:inputType="textMultiLine"
-            android:text="DESCRIPCION" />
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/gentium_basic_bold"
+                android:text="PRECIO:"
+                android:textColor="@color/naranja"
+                android:textSize="20sp" />
 
-        <ListView
-            android:id="@+id/lv"
-            android:layout_width="400dp"
-            android:layout_height="300dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="39dp"
-            android:layout_marginLeft="39dp"
-            android:layout_marginTop="360dp"
-            android:layout_marginEnd="39dp" />
+            <EditText
+                android:id="@+id/edtPrecio"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:ems="10"
+                android:focusable="false"
+                android:fontFamily="@font/gentium_basic_bold"
+                android:gravity="center"
+                android:inputType="numberDecimal"
+                android:text="PRECIO"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused" />
+        </LinearLayout>
 
-    </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:fontFamily="@font/gentium_basic_bold"
+                android:text="DESCRIPCIÓN:"
+                android:textColor="@color/naranja"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/edtDescripcion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:background="@null"
+                android:ems="10"
+                android:focusable="false"
+                android:fontFamily="@font/gentium_basic_bold"
+                android:gravity="center"
+                android:inputType="textMultiLine"
+                android:text="DESCRIPCION"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txvExtras"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:fontFamily="@font/gentium_basic_bold"
+                android:text="EXTRAS: "
+                android:textColor="@color/naranja"
+                android:textSize="20sp" />
+
+            <ListView
+                android:id="@+id/lv"
+                android:layout_width="400dp"
+                android:layout_height="300dp"
+                android:layout_marginTop="30dp"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+    </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
