--- a/app/src/main/res/layout/layout_listview_extras.xml
+++ b/app/src/main/res/layout/layout_listview_extras.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="30dp">
 
     <TextView
         android:id="@+id/txvNombre"
@@ -11,38 +14,46 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp"
+        android:fontFamily="@font/gentium_basic_bold"
         android:gravity="center"
         android:maxWidth="300dp"
-        android:text="NOMBRE"
-        android:minLines="1"
         android:maxLines="2"
-        />
-
-    <TextView
-        android:id="@+id/txvDescripcion"
-        android:layout_width="222dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="44dp"
-        android:layout_marginLeft="44dp"
-        android:layout_marginTop="79dp"
-        android:layout_marginBottom="35dp"
-        android:maxLines="1"
         android:minLines="1"
-        android:text="Lorem ipsum dolor sit amet consectetur adipiscing elit scelerisq." />
+        android:paddingBottom="10dp"
+        android:text="NOMBRE"
+        android:textColor="@color/naranja"
+        android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/txvPrecio"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="79dp"
-        android:layout_marginEnd="51dp"
-        android:layout_marginRight="51dp"
-        android:text="10 €"/>
-</RelativeLayout>
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txvDescripcion"
+            android:layout_width="222dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:fontFamily="@font/gentium_basic_bold"
+            android:gravity="center"
+            android:text="Lorem ipsum dolor sit amet consectetur adipiscing elit scelerisq."
+            android:textColor="@color/common_google_signin_btn_text_dark_focused" />
+
+        <TextView
+            android:id="@+id/txvPrecio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="20dp"
+            android:fontFamily="@font/gentium_basic_bold"
+            android:gravity="center"
+            android:text="10 €"
+            android:textColor="@color/naranja" />
+    </LinearLayout>
+
+</LinearLayout>
